# trading

./: .actrc  .bandit  .cleanupdaily  .cleanupignore  .cleanupwhitelist  .clinerules  .coveragerc  .dockerignore  .env.bak  .env.example  .env.production.example  .flake8  .gitignore  .gitleaks.toml  .gitmessage  .importlinter  .mypy.ini  .pre-commit-config.yaml  .secrets.example  .versions  ARCHITECTURE_ANALYSIS.md  ATR_TRAILING_STOP_FEATURE_SPECIFICATION.md  BBLEAM.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS.md  COMPREHENSIVE_WEBHOOK_ANALYSIS.md  COMP_REVIEW_IMPLEMENTATION.md  COMP_STRATEGY_COMPLETE.md  COMP_STRATEGY_IMPLEMENTATION.md  CSV_SCHEMA_AUDIT_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCS_REORGANIZED.md  DOCUMENTATION_COMPLETE.md  DUPLICATION_ANALYSIS_REPORT.md  Dockerfile.api  E2E_SUCCESS_REPORT.md  E2E_TEST_ANALYSIS.md  E2E_TEST_IMPLEMENTATION_COMPLETE.md  FINAL_E2E_TEST_REPORT.md  (+218 more)
.cursor/: mcp.json
.github/: OPTIMIZATION_SUMMARY.md  WORKFLOWS.md  dependabot.yml
.roo/: mcp.json
BBLEAM/: Alchemist_Thesis_BBLEAM.md  BBLEAM Event Organisation.md  BBLEAM.md  BTC‑Bonded NFT Platform.md  Hermetic Sage.md  Minting_NFTs_with_Bonded_BTC.md  Platform Revenue Models.md  SOLID Nature Tutorial.md  SOLID, KISS, and YAGNI Principles in Nature.md  Trading: My Journey, My Lessons.md
SBC/: POL_Comprehensive_Research_Report_2025.md  SBC_Collateral_Opportunities_Report.md  SBC_Product_Specification.md  SBC_Statistical_Treasury_Whitepaper.md  SBC_Strategic_DeFi_Integration_Roadmap.md  SBC_Yield_Curve_Mathematical_Validation.md  btc_1093_day_hold_analysis.py  btc_1093_day_hold_analysis_20250923_122339.json  btc_monthly_consistency_analysis.py  btc_monthly_consistency_analysis_20250921_095355.json  sbc_yield_curve_calculator.py  sbc_yield_curve_data.csv  yield_curve_cap_analysis.py
app/: Data Refresh.md  advance_decline_score.py  atr.py  correlation.py  csv_viewer  dip.py  return_distribution.py  return_series.py  sensylate  sortino.py  utils.py
architect/: ATR_PHASE1_RESEARCH_ANALYSIS.md  CSV_SCHEMA_STANDARDIZATION_PLAN.md  EQUITY_DATA_EXPORT_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION_PLAN.md  PHASE1_EXPORT_ARCHITECTURE_AUDIT_REPORT.md  SCHEMA_ARCHITECTURE_OPTIMIZATION_PLAN.md  TEST_INFRASTRUCTURE_CONSOLIDATION_PLAN.md  TRADING_SYSTEM_ARCHITECTURAL_CONSOLIDATION_PLAN.md  code_deduplication_plan.md  monte_carlo_refactoring_plan.md  position_sizing_migration_plan.md  test_suite_immediate_actions_plan.md
cache/: cache_metadata.json  risk_free_rate.json
contracts/: ConvergencePricingEngine.sol  DynamicPegManager.sol  DynamicYieldCurve.sol  SBC.sol  SBCBondProtocol.sol  SimplifiedTreasuryManager.sol  TreasuryManager.sol
csv/: BTC-USD_monte_carlo_performance.csv  Metric Types.csv  live_signals.csv
data/: README.md  trading_stats.md
database/: indexes.sql
docs/: AWS_DEPLOYMENT_SPECIFICATION.md  CHANGELOG.md  CODE_QUALITY.md  CONCURRENCY_CALCULATION_FIX_PLAN.md  CONFIGURATION_GUIDE.md  CSV_EXPORT_PHASE4_MIGRATION_GUIDE.md  CSV_SCHEMA_MIGRATION_GUIDE.md  CSV_SCHEMA_PERFORMANCE_BENCHMARK.md  Claude Commands Guide.md  DIVERGENCE_EXIT_OPTIMIZATION_SPECIFICATION.md  DOCUMENTATION_AUDIT_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MERGE_SUMMARY.md  EQUITY_DATA_EXPORT_SPECIFICATION.md  EXPECTANCY_CALCULATION_FIX_SPECIFICATION.md  EXPECTANCY_FIX_ACTIVATION_SUMMARY.md  MACD_PARAMETER_TESTING_USER_GUIDE.md  MSTR_Performance_Discrepancy_Investigation_Plan.md  NAMING_CONVENTIONS_PLAN.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  POSITION_SIZING_SPECIFICATION.md  PRODUCTION_READINESS_ASSESSMENT.md  Phase_2_Configuration_Migration_Guide.md  Position_Sizing_Executive_Specification.md  Product Specification: Sensylate Trading Strategy Platform.md  Quantitative_Trading_System_Architecture_Executive_Specification.md  README.md  RISK_CONTRIBUTION_FIX_SPECIFICATION.md  RISK_FIX_ACTIVATION_SUMMARY.md  SECURITY_SETUP.md  SENSYLATE_PRODUCT_SPECIFICATION.md  SIGNAL_PROCESSING_FIX_SPECIFICATION.md  STATIC_ANALYSIS_INTEGRATION.md  STATISTICAL_ANALYSIS_PRODUCTION_DEPLOYMENT.md  STATISTICAL_ANALYSIS_USAGE.md  STATISTICAL_PERFORMANCE_DIVERGENCE_FEATURE_SPECIFICATION.md  STATISTICAL_PERFORMANCE_DIVERGENCE_IMPLEMENTATION_PLAN.md  STATISTICAL_PERFORMANCE_DIVERGENCE_SYSTEM_SPECIFICATION.md  TYPEDDICT_AUDIT.md  Trade_History_Executive_Specification.md  (+25 more)
examples/: trade_history_close_examples.py  trade_history_usage_examples.py
experimental/: download_russell2000.py
monitoring/: prometheus.yml
nginx/: nginx.prod.conf
prisma/: schema.prisma
product/: TEST_INFRASTRUCTURE_ANALYSIS.md  position_sizing_gap_analysis.md  position_sizing_spreadsheet_specification.md  quantitative_trading_system_enhancement_spec.md
prompts/: chatbot_generator.txt  chatbot_template.txt  chatbot_twitter.txt  code copy.txt  code.txt  compare_portfolios.txt  concurrency_report.txt  hermetic_sage.md  meta_prompt_assistant.md  prompt_template.md  quantitative_trader_feedback.md  reduce_file_length.txt  refactor.txt
puppeteer_examples/: README.md  market_data_scraper.py  trading_alerts_monitor.py
reports/: MA_SMA_78_82_analysis.md  phase4_validation_results.json  test_dashboard.html
riskfolio_env/: pyvenv.cfg
scripts/: .code_quality_progress.json  README.md  add_unit_markers.sh  analyze_integration_tests.py  analyze_spds_dependencies.py  backup.sh  benchmark_phase1.py  benchmark_phase4_final.py  benchmark_unified_export.py  categorize_remaining_tests.py  cleanup_old_files.py  compare_architectures.py  docker-entrypoint.sh  ema_cross_20240807.py  evaluate_memory_optimization.py  find_pure_tests.py  fix_code_quality.py  manage_api_keys.py  memory_profiling.py  migrate.sh  phase2_csv_migration.py  phase4_cleanup.py  replace_custom_statistics.py  setup_database.py  setup_database.sql  simple_db_test.py  simple_spds_test.py  spds_performance_benchmark.py  start_api.sh  test-ci-locally.sh  test-workflow-with-act.sh  test_api.sh  test_api_startup.py  test_cli_integration.py  test_database_setup.py  test_integration_simple.py  test_new_spds_architecture.py  test_phase4_quick.py  test_webhook_e2e_simple.sh  (+11 more)
(+19008 files in other folders)
