[tool.poetry]
name = "trading"
version = "0.1.0"
description = "Trading Strategy Platform with MA Cross, Portfolio Optimization, and GraphQL API"
authors = ["Cole Morton"]
readme = "README.md"
package-mode = true
packages = [
    {include = "app"}
]

[tool.poetry.scripts]
trading-cli = "app.cli.main:cli_main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.16.5,<2.0.0"
yfinance = "^0.2.41"
seaborn = "^0.13.2"
polars = "^1.5.0"
python-dotenv = "^1.0.1"
skfolio = "^0.6.0"
fastapi = "^0.120.2"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
psutil = "^7.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
redis = "^5.0.1"
pydantic-settings = "^2.9.1"
vectorbt = "^0.28.0"
pyarrow = "^20.0.0"
cachetools = "^6.1.0"
typer = "^0.12.0"
rich = "^13.0.0"
pyyaml = "^6.0.0"
plotly = "5.24.1"
arq = "^0.25.0"
bcrypt = "^4.0.0"
sqlmodel = "^0.0.27"
aiohttp = "^3.9.0"
httpx = "^0.27.0"
itsdangerous = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
ruff = ">=0.14.2"
mypy = "^1.16.0"
bandit = "^1.8.6"
pre-commit = "^3.6.0"
types-requests = "^2.32.0.20250602"
pytest-mock = "^3.15.1"
pytest-timeout = "^2.4.0"
pytest-xdist = "^3.8.0"
pydeps = "^3.0.1"
radon = "^6.0.1"
import-linter = "^2.5.2"
vulture = "^2.14"
structlog = "^24.1.0"
hypothesis = "^6.98.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# This is the canonical mypy configuration - all settings are managed here
# Pre-commit hooks use: --config-file=pyproject.toml
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Make MyPy more practical for large codebases
ignore_errors = false
show_error_codes = true
# Allow untyped calls for now - we'll gradually improve
disallow_untyped_calls = false
# Focus on critical errors first - gradually enabling type checking
disable_error_code = ["misc", "union-attr", "attr-defined", "import-untyped", "unreachable", "index", "literal-required", "call-arg", "assignment", "arg-type", "name-defined", "method-assign"]
# Alternatively, use a more permissive approach for now
ignore_missing_imports = true

# Ignore third-party packages without type stubs
[[tool.mypy.overrides]]
module = [
    "vectorbt.*",
    "yfinance.*",
    "seaborn.*",
    "polars.*",
    "skfolio.*",
    "plotly.*",
    "pandas_ta.*",
    "ta.*"
]
ignore_missing_imports = true

# Exclude vendor/external code
[[tool.mypy.overrides]]
module = "app.trading_bot.trendspider.*"
ignore_errors = true

[tool.pylint.messages_control]
disable = "C0103,C0114,C0115,C0116,R0903,R0913,W0613"

[tool.pylint.format]
max-line-length = 88

[tool.vulture]
min_confidence = 80
paths = ["app", "tests"]
exclude = ["*/migrations/*", "*/tests/*"]

[tool.ruff]
# Ruff configuration - modern, fast Python linter
line-length = 88
target-version = "py310"

# Exclude directories
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "node_modules",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "TD",    # flake8-todos
    "FIX",   # flake8-fixme
    "ERA",   # eradicate (commented out code)
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # line too long (handled by black)
    "TD002",   # missing TODO author
    "TD003",   # missing TODO link
    "FIX002",  # line contains TODO
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "RET504",  # unnecessary variable assignment before return
    "SIM108",  # use ternary operator (sometimes less readable)

    # TEMPORARILY DISABLED - Fix incrementally (3,331 violations across 72 rules)
    # Re-enable in priority order once CI passes
    # Track progress: https://github.com/ColeMorton/trading/issues/TBD

    # Priority 1: Critical errors (157 violations)
    "F821",    # undefined-name - CRITICAL RUNTIME ERRORS

    # Priority 2: Code safety (386 violations)
    "B904",    # raise-without-from-inside-except (175)
    "E402",    # module-import-not-at-top-of-file (175)
    "E722",    # bare-except (36)

    # Priority 3: Code complexity (451 violations)
    "PLR0912", # too-many-branches (227)
    "PLR0915", # too-many-statements (176)
    "PLR0911", # too-many-return-statements (48)

    # Priority 4: Architecture patterns (988 violations)
    "PLC0415", # import-outside-top-level - architectural pattern for lazy imports

    # Priority 5: Pathlib migration (567 violations)
    "PTH100",  # os-path-abspath (24)
    "PTH101",  # os-chmod (2)
    "PTH103",  # os-makedirs (49)
    "PTH107",  # os-remove (6)
    "PTH108",  # os-unlink (8)
    "PTH109",  # os-getcwd (3)
    "PTH110",  # os-path-exists (78)
    "PTH112",  # os-path-isdir (1)
    "PTH113",  # os-path-isfile (1)
    "PTH117",  # os-path-isabs (4)
    "PTH118",  # os-path-join (180)
    "PTH119",  # os-path-basename (9)
    "PTH120",  # os-path-dirname (43)
    "PTH122",  # os-path-splitext (2)
    "PTH123",  # builtin-open (309)
    "PTH202",  # os-path-getsize (3)
    "PTH204",  # os-path-getmtime (16)
    "PTH205",  # os-path-getctime (3)
    "PTH207",  # glob (8)
    "PTH208",  # os-listdir (9)

    # Priority 6: Code cleanup & simplification (344 violations)
    "ERA001",  # commented-out-code (150)
    "SIM102",  # collapsible-if (49)
    "SIM103",  # needless-bool (1)
    "SIM105",  # suppressible-exception (8)
    "SIM115",  # open-file-with-context-handler (3)
    "SIM117",  # multiple-with-statements (56)
    "SIM401",  # use-dict-get-with-default (1)
    "B007",    # unused-loop-control-variable (23)
    "B008",    # function-call-in-default-argument (20)
    "B015",    # useless-comparison (1)
    "B017",    # assert-raises-exception (13)
    "B018",    # useless-expression (5)
    "B019",    # cached-instance-method (2)
    "B023",    # function-uses-loop-variable (2)
    "B024",    # abstract-base-class-without-abstract-method (2)
    "E721",    # type-comparison (2)
    "E741",    # ambiguous-variable-name (3)
    "F401",    # unused-import (14)
    "F402",    # import-shadowed-by-loop-var (1)
    "F601",    # multi-value-repeated-key-literal (1)
    "F811",    # redefined-while-unused (3)
    "F823",    # undefined-local (1)
    "N801",    # invalid-class-name (2)
    "N803",    # invalid-argument-name (5)
    "N999",    # invalid-module-name (5)
    "PLC0206", # dict-index-missing-items (13)
    "PLE0704", # misplaced-bare-raise (1)
    "PLR1704", # redefined-argument-from-local (2)
    "PLW0602", # global-variable-not-assigned (3)
    "PLW0603", # global-statement (30)
    "PLW1641", # eq-without-hash (1)
    "PLW2901", # redefined-loop-name (22)
    "RUF001",  # ambiguous-unicode-character-string (42)
    "RUF002",  # ambiguous-unicode-character-docstring (22)
    "RUF003",  # ambiguous-unicode-character-comment (41)
    "RUF005",  # collection-literal-concatenation (1)
    "RUF006",  # asyncio-dangling-task (5)
    "RUF012",  # mutable-class-default (24)
    "RUF034",  # useless-if-else (1)
    "RUF043",  # pytest-raises-ambiguous-pattern (1)
    "RUF059",  # unused-unpacked-variable (5)
    "UP007",   # non-pep604-annotation-union (1)
    "UP035",   # deprecated-import (4)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401", "E402"]
# Relax some rules for tests
"tests/**/*.py" = ["PLR2004", "S101", "S105", "S106"]
# Relax rules for scripts
"scripts/**/*.py" = ["T201", "S101"]

[tool.ruff.lint.isort]
# Make isort compatible with black and standalone isort
combine-as-imports = true
force-sort-within-sections = false
known-first-party = ["app"]
lines-after-imports = 2
force-single-line = false
# Match isort profile="black"
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
